--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,7 +535,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #0563bb;
+  background-color: #274156;
 }
 
 /*--------------------------------------------------------------
@@ -929,7 +929,7 @@ section {
 } */
 
 .services .iconbox-pink i {
-  color: #ef8e19;
+  color: #650219;
 }
 
 /* .services .iconbox-pink:hover .icon i {
@@ -1259,4 +1259,19 @@ section {
 
 #footer .credits a {
   color: var(--verde-cta);
+}
+
+.clients {padding-top: 50px;}
+.clients-area {
+    display: flex;
+    align-items: center;
+    height: 250px;
+}
+.clients-area .item {padding: 0 25px;}
+
+.clients .clients-area .owl-carousel .owl-item img {
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius:0;
 }
