faltan logos de tech

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,6 +538,46 @@ section {
   background-color: #274156;
 }
 
+
+/*--------------------------------------------------------------
+# Akills
+--------------------------------------------------------------*/
+.skills2 .progress2 {
+  height: 60px;
+  display: block;
+  background: none;
+  border-radius: 0;
+}
+
+.skills2 .progress2 .skill2 {
+  padding: 10px 0;
+  margin: 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  color: #45505b;
+}
+
+.skills2 .progress2 .skill2 .val {
+  float: right;
+  font-style: normal;
+}
+
+.skills2 .progress-bar-wrap2 {
+  background: #f2f3f5;
+}
+
+.skills2 .progress-bar2 {
+  width: 1px;
+  height: 10px;
+  transition: 0.9s;
+  background-color: #ff00ff;
+}
+
+
+
+
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
